# sbus-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/: codecov.yml  dependabot.yml
.github/workflows/: benchmark.yml  check.yml  nostd.yml  release.yml  safety.yml  test.yml
benches/: benchmarks.rs  parse_bench.rs  sbus_benches.rs
proptest-regressions/tests/: fuzz.txt
src/: error.rs  lib.rs  packet.rs  parser.rs  tests.rs
src/parser/: asynch.rs  blocking.rs  nonblocking.rs
src/tests/: fuzz.rs  streaming.rs
tests/: fuzz.rs  streaming.rs
