[package]
name = "sbus-rs"
version = "0.1.1"
authors = ["Ragarnoy <tiagolernould@gmail.com>"]
edition = "2021"
rust-version = "1.82"
description = "A no_std compatible SBUS protocol parser for embedded systems"
repository = "https://github.com/Ragarnoy/sbus-rs"
documentation = "https://docs.rs/sbus-rs"
readme = "README.md"
license = "MIT"
keywords = ["sbus", "embedded", "no_std", "parser", "protocol"]
categories = ["embedded", "no-std", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
embedded-io = { version = "0.6", optional = true }
embedded-io-async = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
embedded-io-adapters = { version = "0.6" }
criterion = "0.5"
arbitrary = { version = "1.4.0", features = ["derive"] }
libfuzzer-sys = "0.4"
proptest = "1.5"

[features]
blocking = ["dep:embedded-io", "embedded-io-adapters/std"]
async = ["dep:embedded-io-async", "embedded-io-adapters/tokio-1"]
default = ["blocking"]
std = []

[lib]
bench = false

[[bench]]
name = "sbus_benches"
harness = false